# credmark-model-framework-py

./: .dockerignore  .gitattributes  .gitignore  .pylintrc  .readthedocs.yaml  AUTHORS.rst  Dockerfile  HISTORY.rst  MANIFEST.in  README.md  README.rst  console.py  requirements-dev.txt  requirements.txt  ruff.toml  setup.cfg  setup.py  versioneer.py
credmark/: __main__.py  credmark_dev.py
docs/: Makefile  credmark.cmf.model.InvalidModelSlug.rst  credmark.cmf.model.Model.rst  credmark.cmf.model.ModelDataErrorDesc.rst  credmark.cmf.model.ModelErrorDesc.rst  credmark.cmf.model.WrongModelMethodSignature.rst  credmark.cmf.model.context.ModelContext.rst  credmark.cmf.model.context.RunModelMethod.rst  credmark.cmf.model.context.rst  credmark.cmf.model.create_error_schema_for_error_descs.rst  credmark.cmf.model.describe.rst  credmark.cmf.model.errors.MaxModelRunDepthError.rst  credmark.cmf.model.errors.ModelBaseError.rst  credmark.cmf.model.errors.ModelCallStackEntry.rst  credmark.cmf.model.errors.ModelDataError.rst  credmark.cmf.model.errors.ModelDataErrorDTO.rst  credmark.cmf.model.errors.ModelDefinitionError.rst  credmark.cmf.model.errors.ModelEngineError.rst  credmark.cmf.model.errors.ModelErrorDTO.rst  credmark.cmf.model.errors.ModelInputError.rst  credmark.cmf.model.errors.ModelInvalidStateError.rst  credmark.cmf.model.errors.ModelNoContextError.rst  credmark.cmf.model.errors.ModelNotFoundError.rst  credmark.cmf.model.errors.ModelNotFoundErrorDTO.rst  credmark.cmf.model.errors.ModelOutputError.rst  credmark.cmf.model.errors.ModelRunError.rst  credmark.cmf.model.errors.rst  (+158 more)
(+202 files in other folders)
