[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE

[wheel]
universal = 1

[versioneer]
VCS = git
style = pep440
versionfile_source = credmark/cmf/_version.py
versionfile_build = credmark/cmf/_version.py
tag_prefix = v
parentdir_prefix = credmark-

